# PythonDjango

./: db.sqlite3  pyproject.toml
project/: settings.py  urls.py
todo_list/: apps.py  forms.py  models.py  urls.py  views.py
todo_list/migrations/: 0001_initial.py  0002_remove_task_done_remove_task_title_task_descricao_and_more.py  0003_task_user.py  0004_alter_task_user.py
todo_list/static/css/: home.css  tasks.css
todo_list/templates/: add_task.html  login.html  tasks.html
todo_list/templates/edit_task/: index.html
todo_list/templates/home/: index.html
todo_list/templates/signup/: index.html
todo_list/templates/todo_list/: index.html
